tests/ui/parser/issues/issue-20711.stderr
error: expected item after attributes
  --> $DIR/issue-20711.rs:4:5
   |
LL | impl Foo {
   |          - while parsing this item list starting here
LL |     #[stable(feature = "crablang1", since = "1.0.0")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | }
   | - the item list ends here

error: aborting due to previous error

